src/objects/Payee_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Payee_Auto_Number_MERC__c</fullName>
        <description>Unique Auto Number field used by Web Services to create a secure/obfuscated Payee Id. Created by John Lorenti 2014-05-05.</description>
        <displayFormat>P-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Payee Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Priority_Rank_Nbr_MERC__c</fullName>
        <description>Only one Payee with Priority Rank Number of 1 will be displayed on the portal. Created 05/05/2014 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>Priority Rank Number 1 is maintained on the Web Service.  There may only be one Payee with a Priority Rank Number of 1.</inlineHelpText>
        <label>Priority Rank Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Information_Complete_MERC__c</fullName>
        <description>Indicates whether all bank information has been populated on a payee record. Created 04/18/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF(
(!ISBLANK(Bank_Name_MERC__c) &amp;&amp;
!ISBLANK(Bank_Street_MERC__c) &amp;&amp;
!ISBLANK(Bank_City_MERC__c) &amp;&amp;
!ISBLANK(Bank_Country_MERC__c) &amp;&amp;
!ISBLANK(Bank_Zip_Postal_Code_MERC__c) &amp;&amp;
!ISBLANK(Bank_Account_Number_MERC__c) &amp;&amp;
!ISBLANK(Bank_Sort_Code_MERC__c) 
)

||

(!ISBLANK(Bank_IBAN_MERC__c)) 

, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfer Information Complete</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>